k8s/jellyfin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-deployment
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      # needed for client & service discovery
      hostNetwork: true
      # needed to allow access to cluster's internal dns for services
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin
          resources:
            requests:
              memory: "1024Mi"
              cpu: "100m"
            limits:
              memory: "2048Mi"
              cpu: "500m"
          volumeMounts:
          - mountPath: /config
            name: jellyfin-data
            subPath: config
          - mountPath: /data/tvshows
            name: jellyfin-data
            subPath: data/tvshows
          - mountPath: /data/movies
            name: jellyfin-data
            subPath: data/movies
          - mountPath: /tv
            name: plex-data
            subPath: tv
          - mountPath: /movies
            name: plex-data
            subPath: movies
          imagePullPolicy: IfNotPresent
      volumes:
      - name: jellyfin-data
        persistentVolumeClaim:
          claimName: jellyfin-pvc
      - name: plex-data
        persistentVolumeClaim:
          claimName: plex-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  labels:
    app: jellyfin
spec:
  ports:
  - port: 80
    targetPort: 8096
    name: tcp
  selector:
    app: jellyfin
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jellyfin-ingress
  labels:
    app: jellyfin
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: jellyfin.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: jellyfin-service
          servicePort: 80
